processed/gerrit/txt/45815.txt
Change:     45815
Subject:    LU-15220 utils: fix gcc-11 -Werror=format-truncation= error
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/45815
Change-Id:  I55c3e05a933ff3d2c33a71ed269fffe63797b528
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2021-12-09 20:05:15.000000000
Updated:    2021-12-23 07:21:14.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Sergey Cheremencev: +1; Alex Zhuravlev: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Alex Zhuravlev, James Simmons, Sergey Cheremencev

--- Commit Message ---
LU-15220 utils: fix gcc-11 -Werror=format-truncation= error

This patch fixes the following -Werror=format-truncation= error in
liblustreapi.c:

liblustreapi.c: In function ‘lov_dump_comp_v1’:
liblustreapi.c:3673:57: error: ‘snprintf’ output may be truncated
before the last format character [-Werror=format-truncation=]
 3673 |                 snprintf(pool_name, LOV_MAXPOOLNAME, "%s",
      |                                                         ^

Change-Id: I55c3e05a933ff3d2c33a71ed269fffe63797b528
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/45815
Reviewed-by: James Simmons <jsimmons@infradead.org>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Sergey Cheremencev <sergey.cheremencev@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2021-12-09 20:05:15.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2021-12-09 20:08:57.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (James Simmons, 2021-12-09 20:38:56.000000000) ---
Patch Set 1: Code-Review+1

--- Message (jenkins, 2021-12-09 20:47:45.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/84956/ : SUCCESS

--- Message (Alex Zhuravlev, 2021-12-10 03:59:13.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Autotest, 2021-12-10 04:06:34.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-zfs-part-6 session on el8.3-x86_64/zfs servers and clients for build 84956 patch 1. Requested by jianyu because of LU-15344.

--- Message (Autotest, 2021-12-10 07:24:20.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-part-1 session on el8.3-x86_64/ldiskfs servers and clients for build 84956 patch 1. Requested by jianyu because of LU-14820.

--- Message (Sergey Cheremencev, 2021-12-10 14:18:05.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2021-12-23 07:21:12.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2021-12-23 07:21:14.000000000) ---
Change has been successfully cherry-picked as 9b0b7264a8d7a6a2abe681d15fefc88c27d20c1e by Oleg Drokin
